@@ -314,6 +314,11 @@ img.aligncenter {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+img.size-full {
+	max-width: 640px;
+}
+
 p {
      clear: both;
 }
