@@ -3,14 +3,17 @@ iFeature Changelog
 ****************************
 
 Version 2.0.6 (9-15-11)
--Register sidebars placed in a function that hooks into widgets_init. 
+-Register sidebars now placed in a function that hooks into widgets_init. 
 -Added ID and description to the footer widgetized area. 
+-Fixed post thumbnail alignment issue caused by clearing float fix from 2.0.4.
+-Added post pagination links on main blog index. 
+-Fixed img.size-full width. 
 
 Version 2.0.5 (09-08-11)
 -Stripping HTML from Google + and Google Maps social icon URL option.
 -Stripping HTML from logo and favicon URL option.
 -Updated font choices.
--Updated readme.txt
+-Updated readme.txt.
 
 Version 2.0.4 (8-31-11)
 -Fixed HTML code showing up in header contact area.
